Bunting this for now.  There are a few issues on mobile, but it accomplishes what needs to happen in Chrome & Firefox.  Will revisit once I get the other issues worked out

--- a/src/components/Chat/chat.css
+++ b/src/components/Chat/chat.css
@@ -1,34 +1,40 @@
+.broadcast-set-top {
+  display: flex;
+  flex-direction: column;
+}
+
+.container, .broadcast-set-top { min-height: 100vh; }
+
 .chat-box {
   background: #fff;
-  position: fixed;
-  display: flex;
-  /* height: auto; */
-  width: 100%;
-  height: 40%;
+  flex: 1
 }
 
 .chat-header {
   font-size: 18pt;
-  padding: .4em;
+  padding: .5em;
+  height: 50px;
+  color: #363636;
+  background-color: #f5f5f5;
 }
-
-.chat-header, .chat-submit { height: 60px; }
-.chat-messages, .chat-submit { position: absolute; width: 100%; }
 
 .chat-messages {
   font-size: 14px;
   overflow: scroll;
   display: flex;
+  flex: 1;
   flex-direction: column-reverse;
-  bottom: 60px;
-  top: 60px;
-  overflow-y: auto;
+  width: 100%;
+  /* top: 0; */
+  /* position: absolute; */
 }
 
 .chat-submit {
-  bottom: 0;
+  /* height: 60px; */
   padding: .8em;
   width: 100%;
+  bottom: 60px;
+  position: absolute;
 }
 
 .chat-messages span { margin: 4px; }
